fix: avg block time
