# api/docs/swagger.json
@@ -269,7 +269,7 @@
                 }
             }
         },
-        "/indexer/block/v1/avg_blocktime": {
+        "/indexer/block/v1/avg_block_time": {
             "get": {
                 "description": "Retrieve the average time taken to mine a block",
                 "produces": [
@@ -3656,8 +3656,11 @@
                 "next_key": {
                     "type": "string"
                 },
+                "previous_key": {
+                    "type": "string"
+                },
                 "total": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
